--- a/arch/x86/configs/router_defconfig
+++ b/arch/x86/configs/router_defconfig
@@ -3109,7 +3109,7 @@ CONFIG_IEEE802154_MCR20A=m
 CONFIG_IEEE802154_HWSIM=m
 CONFIG_VMXNET3=m
 CONFIG_FUJITSU_ES=m
-CONFIG_THUNDERBOLT_NET=m
+CONFIG_USB4_NET=m
 CONFIG_HYPERV_NET=m
 CONFIG_NETDEVSIM=m
 CONFIG_NET_FAILOVER=m
@@ -7541,7 +7541,7 @@ CONFIG_MCB_LPC=m
 # end of Performance monitor support
 
 CONFIG_RAS=y
-CONFIG_THUNDERBOLT=m
+CONFIG_USB4=m
 
 #
 # Android
