--- a/arch/x86/configs/laptop_defconfig
+++ b/arch/x86/configs/laptop_defconfig
@@ -5956,11 +5956,13 @@ CONFIG_TYPEC=m
 CONFIG_TYPEC_TCPM=m
 CONFIG_TYPEC_TCPCI=m
 CONFIG_TYPEC_RT1711H=m
+CONFIG_TYPEC_TCPCI_MAXIM=m
 CONFIG_TYPEC_FUSB302=m
 CONFIG_TYPEC_UCSI=m
 CONFIG_UCSI_CCG=m
 CONFIG_UCSI_ACPI=m
 CONFIG_TYPEC_TPS6598X=m
+CONFIG_TYPEC_STUSB160X=m
 
 #
 # USB Type-C Multiplexer/DeMultiplexer Switch support
@@ -7508,6 +7510,7 @@ CONFIG_MCB_LPC=m
 
 CONFIG_RAS=y
 CONFIG_USB4=m
+# CONFIG_USB4_DEBUGFS_WRITE is not set
 
 #
 # Android
