--- a/arch/x86/configs/vm_defconfig
+++ b/arch/x86/configs/vm_defconfig
@@ -4,10 +4,10 @@
 #
 
 #
-# Compiler: gcc (Ubuntu 9.1.0-2ubuntu2~18.04) 9.1.0
+# Compiler: gcc (Ubuntu 9.3.0-11ubuntu0~18.04.1) 9.3.0
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=90100
+CONFIG_GCC_VERSION=90300
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_IRQ_WORK=y
@@ -342,17 +342,10 @@ CONFIG_NO_BOOTMEM=y
 # CONFIG_MSKYLAKEX is not set
 # CONFIG_MCANNONLAKE is not set
 # CONFIG_MICELAKE is not set
-# CONFIG_GENERIC_CPU is not set
-CONFIG_MNATIVE=y
-CONFIG_OPTIMIZE_SPECIFICALLY=y
-# CONFIG_OPTIMIZE_FOR_8550U is not set
-CONFIG_OPTIMIZE_FOR_4170=y
-# CONFIG_OPTIMIZE_FOR_R5_2600 is not set
+CONFIG_GENERIC_CPU=y
+# CONFIG_MNATIVE is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
-CONFIG_X86_INTEL_USERCOPY=y
-CONFIG_X86_USE_PPRO_CHECKSUM=y
-CONFIG_X86_P6_NOP=y
 CONFIG_X86_TSC=y
 CONFIG_X86_CMPXCHG64=y
 CONFIG_X86_CMOV=y
