x86: add an option to specify -mtune, -march flags directly
Signed-off-by: Juhyung Park <qkrwngud825@gmail.com>

--- a/arch/x86/Makefile
+++ b/arch/x86/Makefile
@@ -127,7 +127,9 @@ else
                 $(call cc-option,-march=core2,$(call cc-option,-mtune=generic))
 	cflags-$(CONFIG_MATOM) += $(call cc-option,-march=atom) \
 		$(call cc-option,-mtune=atom,$(call cc-option,-mtune=generic))
-        cflags-$(CONFIG_GENERIC_CPU) += $(call cc-option,-mtune=generic)
+	cflags-$(CONFIG_MARCH) += -march=$(CONFIG_MTUNE_FOR)
+	cflags-y += -mtune=$(CONFIG_MTUNE_FOR)
+
         KBUILD_CFLAGS += $(cflags-y)
 
         KBUILD_CFLAGS += -mno-red-zone
