--- a/arch/x86/configs/router_defconfig
+++ b/arch/x86/configs/router_defconfig
@@ -4,10 +4,10 @@
 #
 
 #
-# Compiler: gcc (Ubuntu 11.1.0-1ubuntu1~20.04) 11.1.0
+# Compiler: gcc (Ubuntu 11.2.0-3ubuntu1) 11.2.0
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=110100
+CONFIG_GCC_VERSION=110200
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_HAS_ASM_GOTO=y
@@ -7600,6 +7600,7 @@ CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_F2FS_FS_COMPRESSION is not set
+# CONFIG_F2FS_IOSTAT is not set
 CONFIG_FS_DAX=y
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
